--- a/views/la_radio.haml
+++ b/views/la_radio.haml
@@ -17,7 +17,8 @@
   %a.right{ href: "https://www.facebook.com/pages/RadioShout/137967656273296?sk=photos_stream" }
     %span Foto FB
     %img{ src: "/images/icons/icon_foto.png" }
-#img_gal
+
+#img_gal.radio
 
 .hidden
   .fiveapi_element{ 'data-type': 'collection', 'data-name': "radio" }
