--- a/views/palinsesto.haml
+++ b/views/palinsesto.haml
@@ -55,7 +55,7 @@
     %td
       %a{ href: "javascript:void(0)" } FEBBRE A 90°
     %td
-      %a{ href: "javascript:void(0)" } TheMentiS
+      %a{ href: "javascript:void(0)" } Amiche Chips
     %td Musica
     %td
       %a{ href: "javascript:void(0)" } DEBUGGING ART
@@ -78,7 +78,7 @@
     %td 21:00-21:30
     %td Musica
     %td
-      %a{ href: "javascript:void(0)" } Indigestion 2:0
+      %a{ href: "/programmi/124" } Blister
     %td Musica
     %td Musica
     %td Musica
@@ -88,13 +88,13 @@
   %tr
     %td 21:30-22:30
     %td
-      %a{ href: "javascript:void(0)" } ROLLOVER DJ
+      %a{ href: "javascript:void(0)" } Rollover DJ 2.0
     %td
       %a{ href: "javascript:void(0)" } BLUESNITE  SHOUT (dalle ore 22:00)
     %td
       %a{ href: "javascript:void(0)" } ANDY'S TEAM
     %td
-      %a{ href: "javascript:void(0)" } BEAT FIGHTER
+      %a{ href: "javascript:void(0)" } iBenCHeD
     %td
       %a{ href: "javascript:void(0)" } RADIOLIVE
     %td
