--- a/views/shout_world.haml
+++ b/views/shout_world.haml
@@ -1,4 +1,4 @@
-.previews.mondo_shout  
+.previews.mondo_shout
 
   .nav
     %a{ href: "/video" }
@@ -13,5 +13,5 @@
 
 
   .fiveapi_element{ 'data-type': 'collection', 'data-name': "video" }
-  .fiveapi_element{ 'data-type': 'collection', 'data-name': "audio" }
-  .fiveapi_element{ 'data-type': 'collection', 'data-name': "articoli" }
+  -# .fiveapi_element{ 'data-type': 'collection', 'data-name': "audio" }
+  -# .fiveapi_element{ 'data-type': 'collection', 'data-name': "articoli" }
