--- a/sass/app.sass
+++ b/sass/app.sass
@@ -92,6 +92,7 @@ a:hover
   margin: 0 5% 40px
 
 #content_outer
+  min-height: 600px
   padding: 15px 10px 0 10px
   border-radius: 10px
   //background: !bg
@@ -291,6 +292,8 @@ ul span
   img
     width:  100%
     position: absolute
+#img_gal.radio
+  margin: 60px 0 0 0
 
 
 #img_gal
