--- a/sass/app.sass
+++ b/sass/app.sass
@@ -378,6 +378,7 @@ table.palinsesto
     padding: 6px 3px 3px 3px
     border-bottom: 1px solid #eee
     width: 12.5%
+    text-align: center
   tbody tr:last-child td
     border-bottom: 0
 
