--- a/views/palinsesto.haml
+++ b/views/palinsesto.haml
@@ -31,88 +31,100 @@
       %td Domenica
 
   %tr
-    %td 16:00-17:00
-    %td Musica
-    %td Musica
-    %td Musica
+    %td 17:00-18:00
+    %td ♪
+    %td ♪
     %td
-      %a{ href: "javascript:void(0)" } Radio Noise
-    %td Musica
-    %td Musica
-    %td Musica
+      %a{ href: "/programmi/123" } Il Confine
+    %td ♪
+    %td ♪
+    %td ♪
+    %td ♪
   %tr
     %td 18:00-19:00
-    %td Musica
-    %td Musica
-    %td Musica
-    %td Musica
     %td
-      %a{ href: "javascript:void(0)" } I Soliti Sospetti
-    %td Musica
-    %td Musica
+      %a{ href: "/programmi/372" } iBenCHeD
+    %td
+      %a{ href: "/programmi/311" } I Soliti Sospetti
+    %td
+      %a{ href: "/programmi/123" } Il Confine
+    %td
+      %a{ href: "/programmi/315" } Amiche Chips
+    %td
+      %a{ href: "/programmi/311" } I Soliti Sospetti
+    %td ♪
+    %td ♪
   %tr
     %td 19:00-20:00
     %td
-      %a{ href: "javascript:void(0)" } FEBBRE A 90°
+      %a{ href: "/programmi/363" } Il Cassetto del Casino
     %td
-      %a{ href: "javascript:void(0)" } Amiche Chips
-    %td Musica
+      %a{ href: "/programmi/315" } Amiche Chips
     %td
-      %a{ href: "javascript:void(0)" } DEBUGGING ART
+      %a{ href: "/programmi/125" } Rollover DJ 2.0
     %td
-      %a{ href: "javascript:void(0)" } IT'ONLY ROCK
-    %td Musica
-    %td Musica
+      %a{ href: "/programmi/310" } Debugging Art
+    %td
+      %a{ href: "/programmi/172" } It's only Rock'n'Roll
+    %td
+      %a{ href: "/programmi/172" } It's only Rock'n'Roll
+    %td
+      %a{ href: "/programmi/315" } Il Garage Ermetico
   %tr
     %td 20:00-21:00
-    %td Musica
-    %td Musica
-    %td Musica
     %td
-      %a{ href: "javascript:void(0)" } Il Garage Ermetico
-    %td Musica
+      %a{ href: "/programmi/310" } Debugging Art
+    %td ♪
     %td
-      %a{ href: "javascript:void(0)" } Il Confine
-    %td Musica
+      %a{ href: "/programmi/312" } BassisLand
+    %td
+      %a{ href: "/programmi/315" } Il Garage Ermetico
+    %td
+      %a{ href: "/programmi/168" } Blues Nite Shout
+    %td
+      %a{ href: "/programmi/123" } Il Confine
+    %td
+      %a{ href: "/programmi/363" } Il Cassetto del Casino
   %tr
     %td 21:00-21:30
-    %td Musica
+    %td ♪
     %td
       %a{ href: "/programmi/124" } Blister
-    %td Musica
-    %td Musica
-    %td Musica
+    %td ♪
+    %td ♪
+    %td ♪
     %td
-      %a{ href: "javascript:void(0)" } Il Confine
-    %td Musica
+      %a{ href: "/programmi/123" } Il Confine
+    %td ♪
   %tr
     %td 21:30-22:30
     %td
-      %a{ href: "javascript:void(0)" } Rollover DJ 2.0
+      %a{ href: "/programmi/125" } Rollover DJ 2.0
     %td
-      %a{ href: "javascript:void(0)" } BLUESNITE  SHOUT (dalle ore 22:00)
+      %a{ href: "/programmi/168" } Blues Nite Shout (dalle 22:00)
     %td
-      %a{ href: "javascript:void(0)" } ANDY'S TEAM
+      %a{ href: "/programmi/374" } Honolulu Express
     %td
-      %a{ href: "javascript:void(0)" } iBenCHeD
+      %a{ href: "/programmi/372" } iBenCHeD
     %td
-      %a{ href: "javascript:void(0)" } RADIOLIVE
+      %a{ href: "/programmi/374" } Honolulu Express
     %td
-      %a{ href: "javascript:void(0)" } Il Confine
-    %td Musica
+      %a{ href: "/programmi/123" } Il Confine
+    %td
+      %a{ href: "/programmi/124" } Blister
   %tr
     %td 22:30-23:30
     %td
-      %a{ href: "javascript:void(0)" } BassisLand
-    %td Musica
+      %a{ href: "/programmi/312" } BassisLand
     %td
-      %a{ href: "javascript:void(0)" } Blues Nite Shout
-    %td Musica
-    %td Musica
-    %td Musica
-    %td Musica
+      %a{ href: "/programmi/168" } Blues Nite Shout
+    %td ♪
+    %td ♪
+    %td ♪
+    %td ♪
+    %td ♪
 
-
-
+.right
+  ♪ = musica
 
 
