move everything into public, support static routes, removing sass

--- a/public/sass/app.sass
+++ b/public/sass/app.sass
@@ -1,5 +1,7 @@
+@import 'reset'
+
 // TODO: add variables into mixins on sass-js
-+gradient(!start, !end)
+=gradient(!start, !end)
   background-image: -webkit-linear-gradient(!start, !end)
   background: !start
 
@@ -19,7 +21,7 @@
 !bg_dark = rgba(179, 229, 230, 0.3)
 
 
-+rounded
+=rounded
   border-radius: 10px
   -webkit-border-radius: 10px
   -moz-border-radius: 10px
@@ -159,8 +161,8 @@ nav
 ul
   margin: 10px 0 20px
   li
-   margin: 3px 0 5px
-   font-weight: bold
+    margin: 3px 0 5px
+    font-weight: bold
 
 h2, h3
   margin: 0 0 10px 0
@@ -174,8 +176,8 @@ h2, h3
   white-space: nowrap
   text-overflow: ellipsis
   a
-   color: #FFF
-   padding: 0 0 0 5px
+    color: #FFF
+    padding: 0 0 0 5px
 p
   margin: 3px 0 5px
 
