--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,8 +3,8 @@
   #head
 
     %meta{ name: "viewport", content: "width=device-width initial-scale=1.0 maximum-scale=1.0 minimum-scale=1.0 user-scalable=0" }
-    %link{ type: "text/sass", href: "/sass/reset.sass" }
-    %link{ type: "text/sass", href: "/sass/app.sass" }
+    -# %link{ type: "text/sass", href: "/sass/reset.sass" }
+    -# %link{ type: "text/sass", href: "/sass/app.sass" }
   #body
     #container
       #inner_container
