--- a/views/layout_sinatra.haml
+++ b/views/layout_sinatra.haml
@@ -3,7 +3,7 @@
   %head
     %title RadioShout
     %meta{:content => "width=device-width, initial-scale=1.0, user-scalable=no", :name => "viewport"}/
-    %link{ src: "/css/app.css", rel: "stylesheet" }
+    %link{ href: "/css/app.css", rel: "stylesheet" }
     %script{:src => "/vendor/markdown.js"}
     %script{:src => "/fivetastic/vendor/all.js"}
     %script{:src => "/vendor/jquery_imagesloaded.js"}
