--- a/public/sass/app.sass
+++ b/public/sass/app.sass
@@ -1,24 +1,24 @@
 @import 'reset'
 
 // TODO: add variables into mixins on sass-js
-=gradient(!start, !end)
-  background-image: -webkit-linear-gradient(!start, !end)
-  background: !start
+=gradient($start, $end)
+  background-image: -webkit-linear-gradient($start, $end)
+  background: $start
 
 // this is your main css file, loaded after reset.sass feel free to delete everything and write your own styles
 
-!text_color2 = #FFF
-//!bg = rgba(179, 229, 230, 0.7)
-!bg = rgba(78,  230, 173, 0.7)
-!bg_alt = rgba(255, 85, 0, 0.7)
-//!bg = !bg_alt
+$text_color2:#FFF
+$bg: rgba(179, 229, 230, 0.7)
+// $bg: rgba(78,  230, 173, 0.7)
+$bg_alt: rgba(255, 85, 0, 0.7)
+//$bg: $bg_alt
 
 #inner_container
   h2, h3
-    //background: !bg_alt
+    //background: $bg_alt
 
 
-!bg_dark = rgba(179, 229, 230, 0.3)
+$bg_dark: rgba(179, 229, 230, 0.3)
 
 
 =rounded
@@ -68,14 +68,14 @@ a:hover
   font-family: lobster
   src: url('/fonts/denne_freakshow.ttf')
 
-!min-width: 480px
+$min-width: 480px
 
 #bg
   position: absolute
   top: 0
   z-index: -1
   width: 100%
-  min-width: !min-width
+  min-width: $min-width
   img
     width: 100%
 
@@ -84,7 +84,7 @@ a:hover
   max-width: 1200px
 
 #inner_inner_container
-  min-width: !min-width
+  min-width: $min-width
   margin: 0 auto
 
 #header
@@ -97,10 +97,11 @@ a:hover
   min-height: 600px
   padding: 15px 10px 0 10px
   border-radius: 10px
-  //background: !bg
   box-shadow: 3px 3px 5px #FFF
   border: 1px solid #999
   border-top: 0
+  // default bg color
+  background: $bg
 
 #content
   margin: 0 0 0 10px
@@ -149,14 +150,14 @@ nav
     font-family: lobster
     font-size: 1em
     border-radius: 10px 10px 0 0
-    background: !bg_dark
+    background: $bg
     border: 1px solid #999
     border-bottom: none
     color: white
 
   a:hover, a.selected
     color: #FFF
-    background: !bg
+    background: $bg
 
 ul
   margin: 10px 0 20px
@@ -183,7 +184,7 @@ p
 
 
 .box
-  color: !text_color2
+  color: $text_color2
   padding: 2px 9px
   margin: 0 0 15px 0
   +rounded
@@ -230,7 +231,6 @@ ul span
     margin: 15px 2% 15px 2%
     img
       width: 100%
-    .title
     .text
       overflow: hidden
       height: 200px
