--- a/views/podcast_page.haml
+++ b/views/podcast_page.haml
@@ -9,7 +9,7 @@
     %a{ href: "/palinsesto" }
       %span Palinsesto
       %img{ src: "/images/icons/icon_palinsesto.png" }
-    %a{ href: "/podcasts" }
+    %a{ href: "http://s3play.makevoid.com/?bucket=radioshout" }
       %span Podcast
       %img{ src: "/images/icons/icon_audio.png" }
 
