--- a/views/la_radio.haml
+++ b/views/la_radio.haml
@@ -11,6 +11,9 @@
   %a{ href: "/podcasts" }
     %span Podcast
     %img{ src: "/images/icons/icon_audio.png" }
+  %a{ href: "http://s3play.makevoid.com/?bucket=radioshout" }
+    %span Archive
+    %img{ src: "/images/icons/icon_audio.png" }
 
 
 
