--- a/views/palinsesto.haml
+++ b/views/palinsesto.haml
@@ -11,6 +11,9 @@
   %a{ href: "/podcasts" }
     %span Podcast
     %img{ src: "/images/icons/icon_audio.png" }
+  %a{ href: "http://s3play.makevoid.com/?bucket=radioshout" }
+    %span Archive
+    %img{ src: "/images/icons/icon_audio.png" }
 
   %a.right{ href: "https://www.facebook.com/pages/RadioShout/137967656273296?sk=photos_stream" }
     %span Foto FB
