--- a/views/podcast_page.haml
+++ b/views/podcast_page.haml
@@ -9,8 +9,11 @@
     %a{ href: "/palinsesto" }
       %span Palinsesto
       %img{ src: "/images/icons/icon_palinsesto.png" }
-    %a{ href: "http://s3play.makevoid.com/?bucket=radioshout" }
+    %a{ href: "/podcasts" }
       %span Podcast
+      %img{ src: "/images/icons/icon_audio.png" }
+    %a{ href: "http://s3play.makevoid.com/?bucket=radioshout" }
+      %span Archive
       %img{ src: "/images/icons/icon_audio.png" }
 
 
