--- a/views/programmi_page.haml
+++ b/views/programmi_page.haml
@@ -9,8 +9,11 @@
     %a{ href: "/palinsesto" }
       %span Palinsesto
       %img{ src: "/images/icons/icon_palinsesto.png" }
-    %a{ href: "http://s3play.makevoid.com/?bucket=radioshout" }
+    %a{ href: "/podcasts" }
       %span Podcast
+      %img{ src: "/images/icons/icon_audio.png" }
+    %a{ href: "http://s3play.makevoid.com/?bucket=radioshout" }
+      %span Archive
       %img{ src: "/images/icons/icon_audio.png" }
 
     %a.right{ href: "https://www.facebook.com/pages/RadioShout/137967656273296?sk=photos_stream" }
