--- a/public/sass/app.sass
+++ b/public/sass/app.sass
@@ -216,6 +216,11 @@ ul span
 .fiveapi_element[data-type='collection'] .article iframe
   width: 100%
 
+.podcast .article
+  img
+    display: none
+  iframe
+    width: 70%
 
 
 .text
