--- a/public/css/app.css
+++ b/public/css/app.css
@@ -97,6 +97,9 @@ a:hover {
 #header {
   padding: 5px 10px 0 10px; }
 
+.content_head {
+  margin-bottom: 15px; }
+
 #inner_inner_container {
   margin: 0 5% 40px; }
 
