--- a/public/sass/app.sass
+++ b/public/sass/app.sass
@@ -90,6 +90,9 @@ $min-width: 480px
 #header
   padding: 5px 10px 0 10px
 
+.content_head
+  margin-bottom: 15px
+
 #inner_inner_container
   margin: 0 5% 40px
 
