--- a/public/css/app.css
+++ b/public/css/app.css
@@ -97,7 +97,7 @@ a:hover {
 #header {
   padding: 5px 10px 0 10px; }
 
-.content_head {
+.content_head > h1 {
   margin-bottom: 15px; }
 
 #inner_inner_container {
