--- a/public/sass/app.sass
+++ b/public/sass/app.sass
@@ -90,7 +90,7 @@ $min-width: 480px
 #header
   padding: 5px 10px 0 10px
 
-.content_head
+.content_head > h1
   margin-bottom: 15px
 
 #inner_inner_container
