--- a/views/palinsesto.haml
+++ b/views/palinsesto.haml
@@ -34,6 +34,17 @@
       %td Domenica
 
   %tr
+    %td 16:00-17:00
+    %td ♪
+    %td 
+      %a{ href: "/programmi/123" } Profiling John Does
+    %td ♪
+    %td ♪
+    %td ♪
+    %td
+      %a{ href: "/programmi/123" } Profiling John Does
+    %td ♪                            
+  %tr
     %td 17:00-18:00
     %td ♪
     %td ♪
