--- a/public/css/app.css
+++ b/public/css/app.css
@@ -406,3 +406,8 @@ table.palinsesto {
   width: 40px;
   text-align: center;
   border-radius: 8px; }
+
+.twitter iframe {
+  width: 96%;
+  margin: 0 auto;
+  display: block; }
