--- a/views/layout.haml
+++ b/views/layout.haml
@@ -26,7 +26,6 @@
               #stream
 
                 -# %img.status{ src: "http://shoutcast.mixstream.net/status/usa7-vn:8012.gif" }
-                %a{ href: "Ascolta con iTunes/winamp"}
                 .swf
                   ! <object type="application/x-shockwave-flash" data="http://shoutcast.mixstream.net/flash/MixStreamPlayer.swf" width="335" height="50" id="mixStreamPlayer" style="visibility: visible; "><param name="wmode" value="transparent"><param name="flashvars" value="serverHost=usa7-vn.mixstream.net&amp;serverPort=8012&amp;getStats=0&amp;autoStart=0&amp;textColour=000000&amp;buttonColour=FFFFFF&amp;backgroundURL=none"><a href="http://www.facebook.com/l.php?u=http%3A%2F%2Fusa7-vn.mixstream.net%3A8012%2Flisten.pls&h=jAQFOjgfx">Ascolta la radio</a></object>
 
@@ -35,6 +34,8 @@
                   %img.icon{ src: "/images/icons/twitter.png" }
                 %a{ href: "https://www.facebook.com/pages/RadioShout/137967656273296" }
                   %img.icon{ src: "/images/icons/facebook.png" }
+                %a{ href: "http://usa7-vn.mixstream.net/8012.pls"}  
+                  %img.icon{ src: "/images/icons/player.png", alt: "Ascolta con iTunes/winamp" }
               %h1
                 %a{ href: "/" }
                   / RadioShout
