--- a/views/layout_sinatra.haml
+++ b/views/layout_sinatra.haml
@@ -1,7 +1,8 @@
 !!!
 %html
   %head
-    %title RadioShout
+    - title = "RadioShout"
+    %title= title
     %meta{:content => "width=device-width, initial-scale=1.0, user-scalable=no", :name => "viewport"}/
     %link{ href: "/css/app.css", rel: "stylesheet" }
     %script{:src => "/vendor/markdown.js"}
