--- a/views/layout_sinatra.haml
+++ b/views/layout_sinatra.haml
@@ -24,7 +24,7 @@
     %meta{ property: "og:url", content: "http://#{host}/" }/
     %meta{ property: "og:type", content: "website" }/
     %meta{ property: "og:site_name", content: title }/
-    %meta{ property: "og:image", content: "http://#{host}/img/logo_orig_square.png" }/
+    %meta{ property: "og:image", content: "http://#{host}/images/logo_orig_square.png" }/
     %meta{ property: "og:description", content: meta_description }/
     %meta{ property: "fb:admins", content: "redazione.radioshout" }/
 
