--- a/views/layout_sinatra.haml
+++ b/views/layout_sinatra.haml
@@ -15,7 +15,7 @@
     %meta{ :"http-equiv" => "X-UA-Compatible", content: "IE=edge" }
     -# %meta{ name: "viewport", content: "width=device-width" }
     - tagline = "#{title} - Shout Your Life"
-    - description = ""
+    - description = "RadioShout nasce dalle menti diaboliche e imprevedibili di un gruppo di ragazzi con tante cose da dire, da fare e da creare. Un laboratorio di espressività collettiva che vuole coinvolgere chiunque voglia dire qualcosa!"
     - meta_description = "#{tagline}#{description}"
     %meta{ name: "description", content: meta_description }
     %meta{ name: "keywords", content: "radioshout, shout, radio, fiesole, web, interviste, band, firenze, fiorentine, eventi, concerti" }
