--- a/public/sass/app.sass
+++ b/public/sass/app.sass
@@ -398,6 +398,16 @@ table.palinsesto
     border-bottom: 0
 
 
+.staff .article .text
+  p
+    width: 33%
+    float: left
+  img
+    width: 100%
+    clear: left
+
+
+
 .hidden
   display:  none
 
