--- a/public/sass/app.sass
+++ b/public/sass/app.sass
@@ -400,11 +400,15 @@ table.palinsesto
 
 .staff .article .text
   p
-    width: 33%
+    width: 27%
     float: left
   img
     width: 100%
-    clear: left
+    padding-right: 13px
+  h2
+    margin-top: 5px
+  p:empty
+    float: none
 
 
 
