--- a/views/layout_sinatra.haml
+++ b/views/layout_sinatra.haml
@@ -8,6 +8,7 @@
     %script{:src => "/vendor/markdown.js"}
     %script{:src => "/fivetastic/vendor/all.js"}
     %script{:src => "/vendor/jquery_imagesloaded.js"}
+    %script{:src => "/vendor/jquery-xcolor.js"}
     %script{:src => "/vendor/jquery_clean.js"}
 
     - host = "radioshout.mkvd.net"
