update main url

--- a/views/layout_sinatra.haml
+++ b/views/layout_sinatra.haml
@@ -11,7 +11,7 @@
     %script{:src => "/vendor/jquery-xcolor.js"}
     %script{:src => "/vendor/jquery_clean.js"}
 
-    - host = "radioshout.mkvd.net"
+    - host = "radioshout.it"
     %meta{ charset: "utf-8" }
     %meta{ :"http-equiv" => "X-UA-Compatible", content: "IE=edge" }
     -# %meta{ name: "viewport", content: "width=device-width" }
@@ -64,8 +64,8 @@
                 .clear
               #content
                 = yield
-                
-                
+
+
               .clear
       #bg
         %img{ src: "/images/sfondo2.png"}
