--- a/public/sass/app.sass
+++ b/public/sass/app.sass
@@ -431,5 +431,5 @@ table.palinsesto
   margin: 0 auto
   display: block
 
-*[data-type=article]
+*[data-type=article] .text p
   text-align: justify
