--- a/views/layout.haml
+++ b/views/layout.haml
@@ -34,6 +34,8 @@
                   %img.icon{ src: "/images/icons/twitter.png" }
                 %a{ href: "https://www.facebook.com/pages/RadioShout/137967656273296" }
                   %img.icon{ src: "/images/icons/facebook.png" }
+                %a{ href: "https://www.youtube.com/user/radioshoutofficial" }
+                  %img.icon{ src: "/images/icons/youtube.png" }
                 %a{ href: "http://usa7-vn.mixstream.net/8012.pls"}  
                   %img.icon{ src: "/images/icons/player.png", alt: "Ascolta con iTunes/winamp" }
               %h1
