--- a/public/sass/app.sass
+++ b/public/sass/app.sass
@@ -220,7 +220,7 @@ ul span
 .fiveapi_element[data-type='collection'] .article iframe
   width: 100%
 
-.podcast .article
+.podcast div[data-type='article'] .article
   img
     display: none
   iframe
