--- a/public/css/app.css
+++ b/public/css/app.css
@@ -225,9 +225,9 @@ ul span {
 .fiveapi_element[data-type='collection'] .article iframe {
   width: 100%; }
 
-.podcast .article img {
+.podcast div[data-type='article'] .article img {
   display: none; }
-.podcast .article iframe {
+.podcast div[data-type='article'] .article iframe {
   width: 70%; }
 
 .text a {
