--- a/public/sass/app.sass
+++ b/public/sass/app.sass
@@ -433,3 +433,8 @@ table.palinsesto
 
 .page.article .text p
   text-align: justify
+
+h2.fest
+  font-size: 1.4em
+  text-align: center
+  margin: 6px 0 0 0
