--- a/views/events.haml
+++ b/views/events.haml
@@ -1,4 +1,7 @@
+%h2.fest
+  %a{ href: "/festival" } RADIOSHOUT FESTIVAL 2013
+
 .previews
   .page.full.eventi
-    
+
     .fiveapi_element{ 'data-type': 'collection', 'data-name': "eventi" }
