--- a/views/palinsesto.haml
+++ b/views/palinsesto.haml
@@ -52,7 +52,8 @@
       %a{ href: "/programmi/123" } Il Confine
     %td ♪
     %td ♪
-    %td ♪
+    %td 
+    %a{ href: "/programmi/390" } Profiling John Does
     %td ♪
   %tr
     %td 18:00-19:00
