add palinsesto textile and other fixes hacks

--- a/public/sass/app.sass
+++ b/public/sass/app.sass
@@ -379,12 +379,13 @@ ul span
   .nav a#img_back
     width: 18%
 
-table.palinsesto
+.palinsesto table
   margin: 10px 0
   width: 100%
   background: rgba(255, 255, 255, 0.3)
   border: 0
   padding: 1%
+  font-size: 0.9em
   thead td
     font-weight: bold
   tbody td:first-child
