--- a/views/palinsesto.haml
+++ b/views/palinsesto.haml
@@ -21,122 +21,10 @@
 %h2 Palinsesto
 
 
-%table.palinsesto{ cellspacing: 0 }
-  %thead
-    %tr
-      %td
-      %td Lunedì
-      %td Martedì
-      %td Mercoledì
-      %td Giovedì
-      %td Venerdì
-      %td Sabato
-      %td Domenica
-
-  %tr
-    %td 16:00-17:00
-    %td ♪
-    %td 
-      %a{ href: "/programmi/390" } Profiling John Does
-    %td ♪
-    %td ♪
-    %td ♪
-    %td
-      %a{ href: "/programmi/390" } Profiling John Does
-    %td ♪                            
-  %tr
-    %td 17:00-18:00
-    %td ♪
-    %td ♪
-    %td
-      %a{ href: "/programmi/123" } Il Confine
-    %td ♪
-    %td ♪
-    %td ♪
-    %td ♪
-  %tr
-    %td 18:00-19:00
-    %td
-      %a{ href: "/programmi/372" } iBenCHeD
-    %td
-      %a{ href: "/programmi/311" } I Soliti Sospetti
-    %td
-      %a{ href: "/programmi/123" } Il Confine
-    %td
-      %a{ href: "/programmi/362" } Amiche Chips
-    %td
-      %a{ href: "/programmi/311" } I Soliti Sospetti
-    %td ♪
-    %td ♪
-  %tr
-    %td 19:00-20:00
-    %td
-      %a{ href: "/programmi/363" } Il Cassetto del Casino
-    %td
-      %a{ href: "/programmi/362" } Amiche Chips
-    %td
-      %a{ href: "/programmi/125" } Rollover DJ 2.0
-    %td
-      %a{ href: "/programmi/310" } Debugging Art
-    %td
-      %a{ href: "/programmi/172" } It's only Rock'n'Roll
-    %td
-      %a{ href: "/programmi/172" } It's only Rock'n'Roll
-    %td
-      %a{ href: "/programmi/315" } Il Garage Ermetico
-  %tr
-    %td 20:00-21:00
-    %td
-      %a{ href: "/programmi/310" } Debugging Art
-    %td ♪
-    %td
-      %a{ href: "/programmi/312" } BassisLand
-    %td
-      %a{ href: "/programmi/315" } Il Garage Ermetico
-    %td
-      %a{ href: "/programmi/168" } Blues Nite Shout
-    %td
-      %a{ href: "/programmi/123" } Il Confine
-    %td
-      %a{ href: "/programmi/363" } Il Cassetto del Casino
-  %tr
-    %td 21:00-21:30
-    %td ♪
-    %td
-      %a{ href: "/programmi/124" } Blister
-    %td ♪
-    %td ♪
-    %td ♪
-    %td
-      %a{ href: "/programmi/123" } Il Confine
-    %td ♪
-  %tr
-    %td 21:30-22:30
-    %td
-      %a{ href: "/programmi/125" } Rollover DJ 2.0
-    %td
-      %a{ href: "/programmi/168" } Blues Nite Shout (dalle 22:00)
-    %td
-      %a{ href: "/programmi/374" } Honolulu Express
-    %td
-      %a{ href: "/programmi/372" } iBenCHeD
-    %td
-      %a{ href: "/programmi/374" } Honolulu Express
-    %td
-      %a{ href: "/programmi/123" } Il Confine
-    %td
-      %a{ href: "/programmi/124" } Blister
-  %tr
-    %td 22:30-23:30
-    %td
-      %a{ href: "/programmi/312" } BassisLand
-    %td
-      %a{ href: "/programmi/168" } Blues Nite Shout
-    %td ♪
-    %td ♪
-    %td ♪
-    %td ♪
-    %td ♪
+.palinsesto
+  -# { cellspacing: 0 }
+  :textile
+    #{File.read("views/palinsesto.textile")}
 
 .right
   ♪ = musica
