--- a/public/css/app.css
+++ b/public/css/app.css
@@ -375,22 +375,23 @@ ul span {
 #fiveapi .nav a#img_back {
   width: 18%; }
 
-table.palinsesto {
+.palinsesto table {
   margin: 10px 0;
   width: 100%;
   background: rgba(255, 255, 255, 0.3);
   border: 0;
-  padding: 1%; }
-  table.palinsesto thead td {
+  padding: 1%;
+  font-size: 0.9em; }
+  .palinsesto table thead td {
     font-weight: bold; }
-  table.palinsesto tbody td:first-child {
+  .palinsesto table tbody td:first-child {
     font-weight: bold; }
-  table.palinsesto td {
+  .palinsesto table td {
     padding: 6px 3px 3px 3px;
     border-bottom: 1px solid #eeeeee;
     width: 12.5%;
     text-align: center; }
-  table.palinsesto tbody tr:last-child td {
+  .palinsesto table tbody tr:last-child td {
     border-bottom: 0; }
 
 .staff .article .text p {
